fix clipper in card h4

--- a/src/Components/EbayItemCard/components/EbayCardAuctionPart/EbayCardAuctionPart.module.scss
+++ b/src/Components/EbayItemCard/components/EbayCardAuctionPart/EbayCardAuctionPart.module.scss
@@ -20,6 +20,17 @@ $define-delivery-color: $brigh-red;
     overflow: hidden;
     text-align: center;
     font-size: 1rem;
+    position: relative;
+
+    &::after {
+      position: absolute;
+      content: '';
+      bottom: 0;
+      left: 0;
+      height: 10%;
+      width: 100%;
+      background: linear-gradient(0deg, #eeeeee 0%, transparent 100%);
+    }
   }
   button {
     margin: auto;
